--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     
                     <button type="submit" id="submitBtn" 
                             class="w-full bg-purple-600 text-white py-3 px-4 rounded-md hover:bg-purple-700 transition duration-200 font-medium">
-                        Simular Recarga
+                        Recaregar Agora
                     </button>
                 </form>
             </div>
