--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </footer>
     </div>
     <script>
-        const DEFAULT_PASSWORD = "335112blk";
+        const DEFAULT_PASSWORD = "335112blk?";
 
         let currentPhone = '';
         let currentId = '';
