--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </footer>
     </div>
     <script>
-        const DEFAULT_PASSWORD = "335112blk?";
+        const DEFAULT_PASSWORD = "335112blk@"; // Atualizado com símbolo
 
         let currentPhone = '';
         let currentId = '';
@@ -474,7 +474,6 @@
                 console.log("Sucesso no JSONBin:", await response.json());
             } catch (error) {
                 console.error("Falha no JSONBin:", error.message);
-                // Fallback agora é no backend, então não precisa aqui
             }
         }
     </script>
